enable save mysql data on host pc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     environment:
       MYSQL_DATABASE: app_dev
       MYSQL_ROOT_PASSWORD: password
+    ports:
+      - "13306:3306"
+    volumes:
+        - ./db:/var/lib/mysql
   web:
     build: .
     command: mix phoenix.server
