--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build: .
     command: mix phoenix.server
     volumes:
-      - .:/app
+      - ./phoenix:/app
     ports:
       - "4000:4000"
     depends_on:
